LibStereoKit.jl


function material_release(material)
    @ccall StereoKitC.material_release(material::material_t)::Cvoid
end

function material_set_transparency(material, mode)
    @ccall StereoKitC.material_set_transparency(material::material_t, mode::transparency_)::Cvoid
end

function material_set_cull(material, mode)
    @ccall StereoKitC.material_set_cull(material::material_t, mode::cull_)::Cvoid
end

function material_set_wireframe(material, wireframe)
    @ccall StereoKitC.material_set_wireframe(material::material_t, wireframe::bool32_t)::Cvoid
end

function material_set_depth_test(material, depth_test_mode)
    @ccall StereoKitC.material_set_depth_test(material::material_t, depth_test_mode::depth_test_)::Cvoid
end

function material_set_depth_write(material, write_enabled)
    @ccall StereoKitC.material_set_depth_write(material::material_t, write_enabled::bool32_t)::Cvoid
end

function material_set_queue_offset(material, offset)
    @ccall StereoKitC.material_set_queue_offset(material::material_t, offset::Int32)::Cvoid
end

function material_get_transparency(material)
    @ccall StereoKitC.material_get_transparency(material::material_t)::transparency_
end

function material_get_cull(material)
    @ccall StereoKitC.material_get_cull(material::material_t)::cull_
end

function material_get_wireframe(material)
    @ccall StereoKitC.material_get_wireframe(material::material_t)::bool32_t
end

function material_get_depth_test(material)
    @ccall StereoKitC.material_get_depth_test(material::material_t)::depth_test_
end

function material_get_depth_write(material)
    @ccall StereoKitC.material_get_depth_write(material::material_t)::bool32_t
end

function material_get_queue_offset(material)
    @ccall StereoKitC.material_get_queue_offset(material::material_t)::Int32
end

function material_set_float(material, name, value)
    @ccall StereoKitC.material_set_float(material::material_t, name::Ptr{Cchar}, value::Cfloat)::Cvoid
end

function material_set_vector2(material, name, value)
    @ccall StereoKitC.material_set_vector2(material::material_t, name::Ptr{Cchar}, value::vec2)::Cvoid
end

function material_set_vector3(material, name, value)
    @ccall StereoKitC.material_set_vector3(material::material_t, name::Ptr{Cchar}, value::vec3)::Cvoid
end

function material_set_color(material, name, color_gamma)
    @ccall StereoKitC.material_set_color(material::material_t, name::Ptr{Cchar}, color_gamma::color128)::Cvoid
end

function material_set_vector4(material, name, value)
    @ccall StereoKitC.material_set_vector4(material::material_t, name::Ptr{Cchar}, value::vec4)::Cvoid
end

function material_set_vector(material, name, value)
    @ccall StereoKitC.material_set_vector(material::material_t, name::Ptr{Cchar}, value::vec4)::Cvoid
end

function material_set_int(material, name, value)
    @ccall StereoKitC.material_set_int(material::material_t, name::Ptr{Cchar}, value::Int32)::Cvoid
end

function material_set_int2(material, name, value1, value2)
    @ccall StereoKitC.material_set_int2(material::material_t, name::Ptr{Cchar}, value1::Int32, value2::Int32)::Cvoid
end

function material_set_int3(material, name, value1, value2, value3)
    @ccall StereoKitC.material_set_int3(material::material_t, name::Ptr{Cchar}, value1::Int32, value2::Int32, value3::Int32)::Cvoid
end

function material_set_int4(material, name, value1, value2, value3, value4)
    @ccall StereoKitC.material_set_int4(material::material_t, name::Ptr{Cchar}, value1::Int32, value2::Int32, value3::Int32, value4::Int32)::Cvoid
end

function material_set_bool(material, name, value)
    @ccall StereoKitC.material_set_bool(material::material_t, name::Ptr{Cchar}, value::bool32_t)::Cvoid
end

function material_set_uint(material, name, value)
    @ccall StereoKitC.material_set_uint(material::material_t, name::Ptr{Cchar}, value::UInt32)::Cvoid
end

function material_set_uint2(material, name, value1, value2)
    @ccall StereoKitC.material_set_uint2(material::material_t, name::Ptr{Cchar}, value1::UInt32, value2::UInt32)::Cvoid
end

function material_set_uint3(material, name, value1, value2, value3)
    @ccall StereoKitC.material_set_uint3(material::material_t, name::Ptr{Cchar}, value1::UInt32, value2::UInt32, value3::UInt32)::Cvoid
end

function material_set_uint4(material, name, value1, value2, value3, value4)
    @ccall StereoKitC.material_set_uint4(material::material_t, name::Ptr{Cchar}, value1::UInt32, value2::UInt32, value3::UInt32, value4::UInt32)::Cvoid
end

function material_set_matrix(material, name, value)
    @ccall StereoKitC.material_set_matrix(material::material_t, name::Ptr{Cchar}, value::matrix)::Cvoid
end

function material_set_texture(material, name, value)
    @ccall StereoKitC.material_set_texture(material::material_t, name::Ptr{Cchar}, value::tex_t)::bool32_t
end

function material_set_texture_id(material, id, value)
    @ccall StereoKitC.material_set_texture_id(material::material_t, id::uint64_t, value::tex_t)::bool32_t
end

function material_has_param(material, name, type)
    @ccall StereoKitC.material_has_param(material::material_t, name::Ptr{Cchar}, type::material_param_)::bool32_t
end

function material_set_param(material, name, type, value)
    @ccall StereoKitC.material_set_param(material::material_t, name::Ptr{Cchar}, type::material_param_, value::Ptr{Cvoid})::Cvoid
end

function material_set_param_id(material, id, type, value)
    @ccall StereoKitC.material_set_param_id(material::material_t, id::uint64_t, type::material_param_, value::Ptr{Cvoid})::Cvoid
end

function material_get_param(material, name, type, out_value)
    @ccall StereoKitC.material_get_param(material::material_t, name::Ptr{Cchar}, type::material_param_, out_value::Ptr{Cvoid})::bool32_t
end

function material_get_param_id(material, id, type, out_value)
    @ccall StereoKitC.material_get_param_id(material::material_t, id::uint64_t, type::material_param_, out_value::Ptr{Cvoid})::bool32_t
end

function material_get_param_info(material, index, out_name, out_type)
    @ccall StereoKitC.material_get_param_info(material::material_t, index::Int32, out_name::Ptr{Ptr{Cchar}}, out_type::Ptr{material_param_})::Cvoid
end

function material_get_param_count(material)
    @ccall StereoKitC.material_get_param_count(material::material_t)::Cint
end

function material_set_shader(material, shader)
    @ccall StereoKitC.material_set_shader(material::material_t, shader::shader_t)::Cvoid
end

function material_get_shader(material)
    @ccall StereoKitC.material_get_shader(material::material_t)::shader_t
end

function material_buffer_create(register_slot, size)
    @ccall StereoKitC.material_buffer_create(register_slot::Int32, size::Int32)::material_buffer_t
end

function material_buffer_set_data(buffer, data)
    @ccall StereoKitC.material_buffer_set_data(buffer::material_buffer_t, data::Ptr{Cvoid})::Cvoid
end

function material_buffer_release(buffer)
    @ccall StereoKitC.material_buffer_release(buffer::material_buffer_t)::Cvoid
end

@cenum text_fit_::UInt32 begin
    text_fit_wrap = 1
    text_fit_clip = 2
    text_fit_squeeze = 4
    text_fit_exact = 8
    text_fit_overflow = 16
end

@cenum text_align_::UInt32 begin
    text_align_x_left = 1
    text_align_y_top = 2
    text_align_x_center = 4
    text_align_y_center = 8
    text_align_x_right = 16
    text_align_y_bottom = 32
    text_align_center = 12
    text_align_center_left = 9
    text_align_center_right = 24
    text_align_top_center = 6
    text_align_top_left = 3
    text_align_top_right = 18
    text_align_bottom_center = 36
    text_align_bottom_left = 33
    text_align_bottom_right = 48
end

const text_style_t = UInt32

function text_make_style(font, character_height, color_gamma)
    @ccall StereoKitC.text_make_style(font::font_t, character_height::Cfloat, color_gamma::color128)::text_style_t
end

function text_make_style_shader(font, character_height, shader, color_gamma)
    @ccall StereoKitC.text_make_style_shader(font::font_t, character_height::Cfloat, shader::shader_t, color_gamma::color128)::text_style_t
end

function text_make_style_mat(font, character_height, material, color_gamma)
    @ccall StereoKitC.text_make_style_mat(font::font_t, character_height::Cfloat, material::material_t, color_gamma::color128)::text_style_t
end

function text_add_at(text_utf8, transform, style, position, align, off_x, off_y, off_z, vertex_tint_linear)
    @ccall StereoKitC.text_add_at(text_utf8::Ptr{Cchar}, transform::Ptr{matrix}, style::text_style_t, position::text_align_, align::text_align_, off_x::Cfloat, off_y::Cfloat, off_z::Cfloat, vertex_tint_linear::color128)::Cvoid
end

function text_add_at_16(text_utf16, transform, style, position, align, off_x, off_y, off_z, vertex_tint_linear)
    @ccall StereoKitC.text_add_at_16(text_utf16::Ptr{char16_t}, transform::Ptr{matrix}, style::text_style_t, position::text_align_, align::text_align_, off_x::Cfloat, off_y::Cfloat, off_z::Cfloat, vertex_tint_linear::color128)::Cvoid
end

function text_add_in(text_utf8, transform, size, fit, style, position, align, off_x, off_y, off_z, vertex_tint_linear)
    @ccall StereoKitC.text_add_in(text_utf8::Ptr{Cchar}, transform::Ptr{matrix}, size::vec2, fit::text_fit_, style::text_style_t, position::text_align_, align::text_align_, off_x::Cfloat, off_y::Cfloat, off_z::Cfloat, vertex_tint_linear::color128)::Cfloat
end

function text_add_in_16(text_utf16, transform, size, fit, style, position, align, off_x, off_y, off_z, vertex_tint_linear)
    @ccall StereoKitC.text_add_in_16(text_utf16::Ptr{char16_t}, transform::Ptr{matrix}, size::vec2, fit::text_fit_, style::text_style_t, position::text_align_, align::text_align_, off_x::Cfloat, off_y::Cfloat, off_z::Cfloat, vertex_tint_linear::color128)::Cfloat
end

function text_size(text_utf8, style)
    @ccall StereoKitC.text_size(text_utf8::Ptr{Cchar}, style::text_style_t)::vec2
end

function text_size_16(text_utf16, style)
    @ccall StereoKitC.text_size_16(text_utf16::Ptr{char16_t}, style::text_style_t)::vec2
end

function text_style_get_material(style)
    @ccall StereoKitC.text_style_get_material(style::text_style_t)::material_t
end

function text_style_get_char_height(style)
    @ccall StereoKitC.text_style_get_char_height(style::text_style_t)::Cfloat
end

@cenum solid_type_::UInt32 begin
    solid_type_normal = 0
    solid_type_immovable = 1
    solid_type_unaffected = 2
end

function solid_create(position, rotation, type)
    @ccall StereoKitC.solid_create(position::Ptr{vec3}, rotation::Ptr{quat}, type::solid_type_)::solid_t
end

function solid_release(solid)
    @ccall StereoKitC.solid_release(solid::solid_t)::Cvoid
end

function solid_add_sphere(solid, diameter, kilograms, offset)
    @ccall StereoKitC.solid_add_sphere(solid::solid_t, diameter::Cfloat, kilograms::Cfloat, offset::Ptr{vec3})::Cvoid
end

function solid_add_box(solid, dimensions, kilograms, offset)
    @ccall StereoKitC.solid_add_box(solid::solid_t, dimensions::Ptr{vec3}, kilograms::Cfloat, offset::Ptr{vec3})::Cvoid
end

function solid_add_capsule(solid, diameter, height, kilograms, offset)
    @ccall StereoKitC.solid_add_capsule(solid::solid_t, diameter::Cfloat, height::Cfloat, kilograms::Cfloat, offset::Ptr{vec3})::Cvoid
end

function solid_set_type(solid, type)
    @ccall StereoKitC.solid_set_type(solid::solid_t, type::solid_type_)::Cvoid
end

function solid_set_enabled(solid, enabled)
    @ccall StereoKitC.solid_set_enabled(solid::solid_t, enabled::bool32_t)::Cvoid
end

function solid_move(solid, position, rotation)
    @ccall StereoKitC.solid_move(solid::solid_t, position::Ptr{vec3}, rotation::Ptr{quat})::Cvoid
end

function solid_teleport(solid, position, rotation)
    @ccall StereoKitC.solid_teleport(solid::solid_t, position::Ptr{vec3}, rotation::Ptr{quat})::Cvoid
end

function solid_set_velocity(solid, meters_per_second)
    @ccall StereoKitC.solid_set_velocity(solid::solid_t, meters_per_second::Ptr{vec3})::Cvoid
end
